tests/errors/type_mismatch.re
struct x {}

fn main() {
    let z = x{} + 1;
}